# continued-pretraining

./: .gitignore  README.md  continued_pretraining.py  cp_dataloader.py  cp_datasets.py  pyproject.toml  requirements.txt  results.csv  run.sh
callbacks/: continued_pretraining_metrics.py
lejepa/: lejepa_cp.py
mae/: mae_cp.py  mae_cp_forward.py
run/slurm/baseline-only/: run_pretrained_all.sh  run_randomized_all.sh
run/slurm/pre-cp-only/BreastMNIST/: clip_run.sh  dinov3_run.sh  mae_run.sh
run/slurm/pre-cp-only/DIET/: run_all.sh  run_breastmnist.sh  run_dermamnist.sh  run_fgvc_aircraft.sh  run_food101.sh  run_galaxy10.sh  run_octmnist.sh  run_organamnist.sh  run_pathmnist.sh  run_small.sh  test.sh
run/slurm/pre-cp-only/DermaMNIST/: clip_run.sh  dinov3_run.sh  mae_run.sh
run/slurm/pre-cp-only/FGVC_Aircraft/: clip_run.sh  dinov3_run.sh  mae_run.sh
run/slurm/pre-cp-only/Food101/: clip_run_1000.sh  clip_run_max.sh  dinov3_run_10000.sh  dinov3_run_25000.sh  dinov3_run_max.sh  dinov3_run_small.sh  mae_run_1000.sh  mae_run_max.sh
run/slurm/pre-cp-only/Galaxy10/: clip_run_1000.sh  clip_run_max.sh  dinov3_run_10000.sh  dinov3_run_max.sh  dinov3_run_small.sh  mae_run_1000.sh  mae_run_max.sh
run/slurm/supervised/: baseline_lejepa_rand_pre.sh
stable_cp/: __init__.py
stable_cp/callbacks/: __init__.py  common_callback.py  continued_pretraining_metrics.py  lejepa_metrics.py
stable_cp/core/: __init__.py  config.py  registry.py
stable_cp/data/: __init__.py  datasets.py  loaders.py  transforms.py
stable_cp/evaluation/: __init__.py  knn_test.py  sft_eval.py  zero_shot_eval.py
stable_cp/methods/diet/: diet_cp.py  diet_forward.py
stable_cp/methods/lejepa/: lejepa_cp.py  lejepa_forward.py
stable_cp/methods/mae/: mae_cp.py  mae_cp_forward.py
stable_cp/methods/simclr/: simclr_cp.py  simclr_cp_forward.py
stable_cp/methods/supervised/: __init__.py  sft_cp.py  sft_forward.py
stable_cp/methods/tent/: tent_cp.py  tent_cp_forward.py
stable_cp/utils/: __init__.py  backbone.py  checkpointing.py  logging.py  training.py
(+83 files in other folders)
