[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stable-cp"
version = "0.1.0"
description = "A benchmark and toolkit for continued pretraining methods"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Akshay Ghandikota"},
    {name= "Jakob Ambsdorf", email="jaam@di.ku.dk"},
    {name= "Haodong Zhang", email="haodong_zhang@brown.edu"}
]
keywords = ["deep learning", "self-supervised learning", "continued pretraining", "vision transformers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "lightning>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.0.0",
    "wandb>=0.15.0",
    "scikit-learn>=1.0.0",
    "torchmetrics>=1.0.0",
    "numpy>=1.20.0",
    "tqdm>=4.60.0",
    "pillow>=9.0.0",
    "stable-pretraining @ git+https://github.com/galilai-group/stable-pretraining.git",
    "stable-datasets @ git+https://github.com/galilai-group/stable-datasets.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[tool.setuptools]
packages = {find = {where = ["."], include = ["stable_cp*"]}}

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
